fix contacts on mobile layout

--- a/src/app/styles/contacts.module.css
+++ b/src/app/styles/contacts.module.css
@@ -1,69 +1,116 @@
-.sec1 {
-  /* border: 1px solid black; */
-  margin-top: 9rem;
-  width: 100%;
-  height: 50rem;
-  box-shadow: rgba(0, 0, 0, 0.05) 0px 3px 2px 0px;
-}
-.sec2 {
-  padding: 130px;
-  display: flex;
-  /* border: 1px solid black; */
-  width: 100%;
-
-  padding-top: 40px;
-}
-.div1 {
-  margin-right: 50px;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-.div1sub {
-  display: flex;
-  gap: 5px;
-}
-.div2 {
-  display: flex;
-  gap: 5px;
-}
-.div3 {
-  gap: 5px;
-  display: flex;
-  margin-left: 50px;
-}
-.div3h3 {
-  display: flex;
-  flex-direction: column;
-}
-.div2h2 {
-  display: flex;
-  flex-direction: column;
-}
-.divh1 {
-  border: 1px solid black;
-  width: 100%;
-  text-align: center;
-}
-.contactsh1 {
-  font-weight: 900;
-}
-.circle {
-  border-radius: 74%;
-  width: 54px;
-  height: 54px;
-  padding: 10px;
-  background: #fff;
-  border: 3px solid #000;
-  color: #000;
-  text-align: center;
-  font: 32px Arial, sans-serif;
-}
-@media (max-width: 660px) {
+@media (min-width: 900px) {
   .sec1 {
-    margin-top: 100rem;
+    /* border: 1px solid black; */
+    margin-top: 9rem;
     width: 100%;
-    height: 40rem;
+    height: 50rem;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 3px 2px 0px;
+  }
+  .sec2 {
+    padding: 130px;
+    display: flex;
+    /* border: 1px solid black; */
+    width: 100%;
+
+    padding-top: 40px;
+  }
+  .div1 {
+    margin-right: 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .div1sub {
+    display: flex;
+    gap: 5px;
+  }
+  .div2 {
+    display: flex;
+    gap: 5px;
+  }
+  .div3 {
+    gap: 5px;
+    display: flex;
+    margin-left: 50px;
+  }
+  .div3h3 {
+    display: flex;
+    flex-direction: column;
+  }
+  .div2h2 {
+    display: flex;
+    flex-direction: column;
+  }
+  .divh1 {
+    border: 1px solid black;
+    width: 100%;
+    text-align: center;
+  }
+  .contactsh1 {
+    font-weight: 900;
+  }
+  .circle {
+    border-radius: 74%;
+    width: 54px;
+    height: 54px;
+    padding: 10px;
+    background: #fff;
+    border: 3px solid #000;
+    color: #000;
+    text-align: center;
+    font: 32px Arial, sans-serif;
+  }
+  .div22 {
+    display: none;
+  }
+}
+
+@media (max-width: 899px) {
+  .sec1 {
+    min-width: 100%;
+    min-height: 40vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+
+    border: 1px solid black;
+  }
+  .div2h2 {
+    font-size: 13px;
+  }
+  .circle {
+    border-radius: 74%;
+    width: 34px;
+    height: 34px;
+    padding: 10px;
+    background: #fff;
+    border: 2px solid #000;
+    color: #000;
+    text-align: center;
+    font: 12px Arial, sans-serif;
+  }
+  .sec2 {
+    display: flex;
+    flex-direction: column;
+  }
+  .div1sub {
+    display: flex;
+    font-size: 13px;
+    gap: 1rem;
+  }
+  .div3 {
+    display: flex;
+    font-size: 13px;
+    gap: 1rem;
+  }
+  .div2 {
+    display: none;
+    font-size: 13px;
+    gap: 1rem;
+  }
+  .div22 {
+    display: flex;
+    gap: 1rem;
   }
 }
